--- a/src/app/main/home/acc/acc.component.html
+++ b/src/app/main/home/acc/acc.component.html
@@ -1,13 +1,13 @@
 <div class="boxContainer shadow">
     <div class="headerContent row">
-        <h4 class="col-9">{{ account.name}}</h4>
-        <span class="pull-right negative col-2" [class.negative]="total < 0">{{total}}€</span> 
+        <h4 class="flex-grow-1">{{ account.name}}</h4>
+        <span class="negative" [class.negative]="total < 0">{{total}}€</span> 
     </div>  
     
     <div *ngFor="let movement of movements | slice:0:3;" class="bodyContent">
         <div class="row movement">
-            <h6 class="col-md-9 col-xs-6">{{ movement.name }}</h6>
-            <span class="col-md-3 col-xs-6 negative" [class.negative]="movement.amount < 0">{{ movement.amount}} €</span> 
+            <h6 class="flex-grow-1">{{ movement.name }}</h6>
+            <span class="negative" [class.negative]="movement.amount < 0">{{ movement.amount}} €</span> 
         </div>  
     </div>
 </div>
