--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
                   </ul>
                 </div>
     
-                <div class="alert alert-danger text-left msgBox" *ngIf="isLoginMsg">
+                <div class="alert alert-success text-left msgBox" *ngIf="isLoginMsg">
                   {{loginMessage}}
                 </div>
     
