--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div *ngFor="let account of accounts" class=" col-md-12 col-lg-6">
-        <app-acc [account]="account"></app-acc>    
+        <app-acc [account]="account" [accounts]="accounts"></app-acc>    
     </div>
 </div>
     
