--- a/src/app/main/home/acc/acc.component.scss
+++ b/src/app/main/home/acc/acc.component.scss
@@ -4,6 +4,7 @@
 .headerContent{
     border-bottom: 1px solid $detailsGrey;
     margin-bottom: 10px;
+    align-items: baseline;
 }
 
 .bodyContent{
@@ -21,13 +22,26 @@
         margin: 1rem;
         color: $primaryGrey;
         text-decoration: none;
+    
     }
-    button {
-        margin: 1rem;
-        justify-content: space-evenly;
-    }
+
 }
 
+.dataForm {
+    margin: 1rem;
+
+    input {
+        margin: 1rem;
+    }
+    select {
+        margin: 1rem;
+    }
+    .row {
+        justify-content: space-evenly;
+        border-bottom: 1px solid $detailsGrey;
+        padding-bottom: 10px;
+    }
+}
 
 .negative {
     color: $detailsRed;
